--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
-  # uncomment initdb if you need initdb at first run
-  initdb:
-    build: .
-    entrypoint: airflow initdb
-    depends_on:
-     - postgres
+
   webserver:
     build: .
     restart: always
@@ -26,9 +21,12 @@ services:
       - ./airflow_files/dags:/usr/local/airflow/dags
       - ./airflow_files/logs:/usr/local/airflow/logs
       - ./airflow_files/packages:/usr/local/airflow/packages
+      - ./airflow_files/plugins:/usr/local/airflow/plugins
     ports:
       - "8080:8080"
-    entrypoint: airflow webserver
+      - "5555:5555"
+      - "8793:8793"
+    command: webserver
     healthcheck:
       test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
       interval: 30s
