--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     build: .
     container_name: "modeltrainer"
     restart: always
+    env_file:
+      - .env
     depends_on:
       - postgres
     volumes:
