we have dag generator from jobs

--- a/airflow.cfg
+++ b/airflow.cfg
@@ -81,7 +81,7 @@ parallelism = 32
 dag_concurrency = 16
 
 # Are DAGs paused by default at creation
-dags_are_paused_at_creation = True
+dags_are_paused_at_creation = False
 
 # When not using pools, tasks are run in the "default pool",
 # whose size is guided by this config element
@@ -226,7 +226,7 @@ access_logfile = -
 error_logfile = -
 
 # Expose the configuration file in the web server
-expose_config = False
+expose_config = True
 
 # Set to true to turn on authentication:
 # https://airflow.incubator.apache.org/security.html#web-authentication
