conexion with control tower done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,18 +15,18 @@ services:
     networks:
       - geopredictordb-network
   
-  cloud-sql-proxy:
-    container_name: "geopredictor"
-    image: gcr.io/cloudsql-docker/gce-proxy:1.16
-    # Port: MySQL (3306), PostgreSQL (5433)
-    command: /cloud_sql_proxy -instances=skydipper-196010:europe-west1:skydipper-pg-1=tcp:0.0.0.0:5433 -credential_file=/config
-    volumes:
-      - ./sqlPrivateKey.json:/config
-    ports:
-      - "3057:5433"
-    networks:
-      - geopredictordb-network
-    restart: always
+  # cloud-sql-proxy:
+  #   container_name: "geopredictor"
+  #   image: gcr.io/cloudsql-docker/gce-proxy:1.16
+  #   # Port: MySQL (3306), PostgreSQL (5433)
+  #   command: /cloud_sql_proxy -instances=skydipper-196010:europe-west1:skydipper-pg-1=tcp:0.0.0.0:5433 -credential_file=/config
+  #   volumes:
+  #     - ./sqlPrivateKey.json:/config
+  #   ports:
+  #     - "3057:5433"
+  #   networks:
+  #     - geopredictordb-network
+  #   restart: always
   
   webserver:
     build: .
