--- a/api/k8s/production/mt-webserver.yaml
+++ b/api/k8s/production/mt-webserver.yaml
@@ -22,9 +22,9 @@ spec:
         imagePullPolicy: Always
         resources:
           requests:
-            memory: "128Mi"
+            memory: "256Mi"
           limits:
-            memory: "512Mi"
+            memory: "1Gi"
         args:
           - webserver
         env:
