--- a/api/k8s/services/mt-webserver.yaml
+++ b/api/k8s/services/mt-webserver.yaml
@@ -7,6 +7,7 @@ metadata:
   name: mt-webserver
 spec:
   ports:
-    - port: 3053
+    - port: 8080
+      name: airflow
   selector:
     name: mt-webserver
