webserver healthchecks and config

--- a/api/k8s/production/mt-webserver.yaml
+++ b/api/k8s/production/mt-webserver.yaml
@@ -20,6 +20,26 @@ spec:
       - name: mt-webserver
         image: skydipper/mt-webserver
         imagePullPolicy: Always
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /admin/airflow/login
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          successThreshold: 1
+          timeoutSeconds: 5
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /admin/airflow/login
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          successThreshold: 1
+          timeoutSeconds: 5
         resources:
           requests:
             memory: "256Mi"
