--- a/api/k8s/services/mt-webserver.yaml
+++ b/api/k8s/services/mt-webserver.yaml
@@ -6,8 +6,11 @@ metadata:
     name: mt-webserver
   name: mt-webserver
 spec:
+  type: NodePort
   ports:
-    - port: 8080
-      name: airflow
+  - name: http
+    protocol: TCP
+    port: 8080
+    targetPort: 8080
   selector:
     name: mt-webserver
